Feature/gerber (#881)
* gerber initial implementation

* added icon

* refactor actions

* add ground fill for gerber

* reorganize export actions

* fix gerber export of pcb text

* handle negative pcb text

* improve positioning of pcb text

* add board outline for gerber

* add support for other pad shapes

* handle 0 hole size

* added solder mask layer

* refactor gerber support to simplify components

* added silk screen support, some refactor

* libs

* fix mirroring

* outline support

* simplify layers

* Fix board alignment

* handle circular pads

* handle empty string

* update

* fixes

* add text to silk

* fix text tracing

* cleanup

* fix layer id

* optimize continuity calculations

* Solder pad - pth vs npth

* gerber fixes

* netlist improvement

* Update update.xml

* Pasting a building block sometimes messes up the z-order of components

* Pasting a building block sometimes switches selection to previously added components and canvas moves to the wrong position

* 'Highlight Continuity Areas' sometimes renders stale areas when clicked

* beta build

* fix builds

* appimage

* appimage

* appimage

* fix building from downloaded jre

* disable fractional metrics

* appimage

* Create build.zip

* bat for setup

* fix for high DPI monitors

* fixes

* scaling

* appimage

* 4.41 release

* cleanup

* Update org.eclipse.core.resources.prefs