@@ -48,6 +48,7 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import javax.swing.JOptionPane;
 import org.apache.log4j.Logger;
+import org.diylc.appframework.miscutils.IConfigListener;
 import org.diylc.appframework.miscutils.IConfigurationManager;
 import org.diylc.appframework.miscutils.JarScanner;
 import org.diylc.appframework.miscutils.Utils;
@@ -75,6 +76,7 @@ import org.diylc.core.Template;
 import org.diylc.core.Theme;
 import org.diylc.core.VisibilityPolicy;
 import org.diylc.core.annotations.IAutoCreator;
+import org.diylc.core.gerber.GerberExporter;
 import org.diylc.core.measures.Size;
 import org.diylc.core.measures.SizeUnit;
 import org.diylc.lang.LangUtil;
@@ -97,7 +99,7 @@ import com.thoughtworks.xstream.security.AnyTypePermission;
  * 
  * @author Branislav Stojkovic
  */
-public class Presenter implements IPlugInPort {
+public class Presenter implements IPlugInPort, IConfigListener {
 
   private static final String REACHED_BOTTOM =
       LangUtil.translate("Selected component(s) have reached the bottom of their layer. Do you want to force the selection to the back?");
@@ -231,6 +233,8 @@ public class Presenter implements IPlugInPort {
       variantManager.importDefaultVariants();
       buildingBlockManager.importDefaultBlocks();
     }
+    
+    this.configManager.addConfigListener(HIGHLIGHT_CONTINUITY_AREA, this);
   }
 
   public void installPlugin(Supplier<IPlugIn> plugInSupplier) {
@@ -418,6 +422,11 @@ public class Presenter implements IPlugInPort {
       }
     }
   }
+  
+  @Override
+  public void exportToGerber(String fileNameBase, Graphics2D g2d) {
+    GerberExporter.exportGerber(fileNameBase, currentProject, view, g2d, getCurrentVersionNumber().toString());    
+  }
 
   @Override
   public String getCurrentFileName() {
@@ -494,7 +503,8 @@ public class Presenter implements IPlugInPort {
   }
 
   @Override
-  public void draw(Graphics2D g2d, Set<DrawOption> drawOptions, final IComponentFilter filter, java.lang.Double externalZoom, Rectangle2D visibleRect) {
+  public void draw(Graphics2D g2d, Set<DrawOption> drawOptions, final IComponentFilter filter, Double externalZoom, 
+      Double scaleFactor, Rectangle2D visibleRect) {
     if (currentProject == null) {
       return;
     }
@@ -536,7 +546,7 @@ public class Presenter implements IPlugInPort {
                 getLockedComponents(),
                 groupedComponents,
                 Arrays.asList(instantiationManager.getFirstControlPoint(),
-                    instantiationManager.getPotentialControlPoint()), componentSlotToDraw, dragInProgress, externalZoom,
+                    instantiationManager.getPotentialControlPoint()), componentSlotToDraw, dragInProgress, externalZoom, scaleFactor,
                 visibleRect);
     List<String> failedComponentNames = new ArrayList<String>();
     for (IDIYComponent<?> component : failedComponents) {
@@ -616,22 +626,16 @@ public class Presenter implements IPlugInPort {
                 CalcUtils.snapPointToGrid(scaledPoint, currentProject.getGridSpacing());
               }
               List<IDIYComponent<?>> componentSlot = instantiationManager.getComponentSlot();
-              List<IDIYComponent<?>> newSelection = new ArrayList<IDIYComponent<?>>();
-              for (IDIYComponent<?> component : componentSlot) {
-                addComponent(component, true);
-                newSelection.add(component);
-              }
+              List<IDIYComponent<?>> newSelection = new ArrayList<IDIYComponent<?>>(componentSlot);
+              addComponents(componentSlot);
               // group components if there's more than one, e.g. building blocks, but not clipboard
               // contents
               if (componentSlot.size() > 1 && !componentTypeSlot.getName().toLowerCase().contains("clipboard")) {
                 this.currentProject.getGroups().add(new HashSet<IDIYComponent<?>>(componentSlot));
               }
-              // Select the new component
-              // messageDispatcher.dispatchMessage(EventType.SELECTION_CHANGED,
-              // selectedComponents);
-              // messageDispatcher.dispatchMessage(EventType.SELECTION_SIZE_CHANGED,
-              // calculateSelectionDimension());
-              messageDispatcher.dispatchMessage(EventType.REPAINT);
+              
+              notifyProjectModifiedIfNeeded(oldProject, "Add " + componentTypeSlot.getName(), true, true);
+
               updateSelection(newSelection);
             } catch (Exception e) {
               LOG.error("Error instatiating component of type: " + componentTypeSlot.getInstanceClass().getName(), e);
@@ -660,24 +664,19 @@ public class Presenter implements IPlugInPort {
                 view.showMessage(ERROR_CREATE, ERROR, IView.ERROR_MESSAGE);
                 LOG.error("Could not create component", e);
               }
+              
+              notifyProjectModifiedIfNeeded(oldProject, "Add " + componentTypeSlot.getName(), true, true);
+              
               messageDispatcher.dispatchMessage(EventType.SLOT_CHANGED, componentTypeSlot,
                   instantiationManager.getFirstControlPoint());
-              messageDispatcher.dispatchMessage(EventType.REPAINT);
             } else {
               // On the second click, add the component to the
               // project.
-              addPendingComponentsToProject(scaledPoint, componentTypeSlot, template, model);
+              addPendingComponentsToProject(scaledPoint, componentTypeSlot, template, model, oldProject);
             }
             break;
           default:
             LOG.error("Unknown creation method: " + componentTypeSlot.getCreationMethod());
-        }
-        // Notify the listeners.
-        if (!oldProject.equals(currentProject)) {
-          messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Add "
-              + componentTypeSlot.getName());
-          drawingManager.clearContinuityArea();
-          projectFileManager.notifyFileChange();
         }
       } else if (configManager.readBoolean(HIGHLIGHT_CONTINUITY_AREA, false) || altDown) {
         drawingManager.findContinuityAreaAtPoint(scaledPoint);
@@ -721,7 +720,22 @@ public class Presenter implements IPlugInPort {
     }
   }
 
-  private void addPendingComponentsToProject(Point2D scaledPoint, ComponentType componentTypeSlot, Template template, String[] model) {
+  private void notifyProjectModifiedIfNeeded(Project oldProject, String action, boolean clearContinuityArea, boolean repaint) {
+    // Notify the listeners.
+    if (oldProject == null || !currentProject.equals(oldProject)) {
+      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, action);
+      if (clearContinuityArea) {
+        drawingManager.clearContinuityArea();
+      }
+      projectFileManager.notifyFileChange();
+      if (repaint) {
+        messageDispatcher.dispatchMessage(EventType.REPAINT);
+      }
+    }
+  }
+
+  private void addPendingComponentsToProject(Point2D scaledPoint, ComponentType componentTypeSlot, Template template, String[] model,
+      Project oldProject) {
     List<IDIYComponent<?>> componentSlot = instantiationManager.getComponentSlot();
     Point2D firstPoint = componentSlot.get(0).getControlPoint(0);
     // don't allow to create component with the same points
@@ -737,6 +751,8 @@ public class Presenter implements IPlugInPort {
       }
     }
 
+    notifyProjectModifiedIfNeeded(oldProject, "Add " + componentTypeSlot.getName(), true, true);
+    
     updateSelection(newSelection);
     messageDispatcher.dispatchMessage(EventType.REPAINT);
 
@@ -798,10 +814,9 @@ public class Presenter implements IPlugInPort {
         mirrorComponents(this.selectedComponents, IComponentTransformer.VERTICAL, snapToGrid);
       } else
         return false;
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          "Rotate Selection");
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
-      drawingManager.clearContinuityArea();
+      
+      notifyProjectModifiedIfNeeded(oldProject, "Rotate Selection", true, true);
+     
       return true;
     }
 
@@ -842,8 +857,7 @@ public class Presenter implements IPlugInPort {
 
     Project oldProject = currentProject.clone();
     moveComponents(controlPointMap, dx, dy, snapToGrid, snapToObjects);
-    messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Move Selection");
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
+    notifyProjectModifiedIfNeeded(oldProject, "Move Selection", true, true);
     return true;
   }
 
@@ -1060,9 +1074,7 @@ public class Presenter implements IPlugInPort {
 
     Project oldProject = currentProject.clone();
     moveComponents(controlPointMap, dx, dy, false, false);
-    messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Move Selection");
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
-    drawingManager.clearContinuityArea();
+    notifyProjectModifiedIfNeeded(oldProject, "Move Selection", true, true);
   }
   
   @SuppressWarnings("unchecked")
@@ -1429,10 +1441,8 @@ public class Presenter implements IPlugInPort {
       LOG.trace("Rotating selected components");
       Project oldProject = currentProject.clone();
       rotateComponents(this.selectedComponents, direction, isSnapToGrid());
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          "Rotate Selection");
-      drawingManager.clearContinuityArea();
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
+      
+      notifyProjectModifiedIfNeeded(oldProject,  "Rotate Selection", true, true);
     }
   }
 
@@ -1472,66 +1482,6 @@ public class Presenter implements IPlugInPort {
     // Remove from area map.    
     drawingManager.clearComponentAreaMap();
     drawingManager.clearContinuityArea();
-
-    // AffineTransform rotate = AffineTransform.getRotateInstance(Math.PI / 2 * direction, center.x,
-    // center.y);
-    //
-    // // Update all points to new location.
-    // for (IDIYComponent<?> component : components) {
-    // drawingManager.invalidateComponent(component);
-    // ComponentType type =
-    // ComponentProcessor.getInstance().extractComponentTypeFrom(
-    // (Class<? extends IDIYComponent<?>>) component.getClass());
-    // if (type.isRotatable()) {
-    // for (int index = 0; index < component.getControlPointCount(); index++) {
-    // Point p = new Point(component.getControlPoint(index));
-    // rotate.transform(p, p);
-    // component.setControlPoint(p, index);
-    // }
-    // // If component has orientation, change it too
-    // List<PropertyWrapper> newProperties =
-    // ComponentProcessor.getInstance().extractProperties(component.getClass());
-    // for (PropertyWrapper property : newProperties) {
-    // if (property.getType() == Orientation.class) {
-    // try {
-    // property.readFrom(component);
-    // Orientation orientation = (Orientation) property.getValue();
-    // Orientation[] values = Orientation.values();
-    // int newIndex = orientation.ordinal() + direction;
-    // if (newIndex < 0)
-    // newIndex = values.length - 1;
-    // else if (newIndex >= values.length)
-    // newIndex = 0;
-    // property.setValue(values[newIndex]);
-    // property.writeTo(component);
-    // } catch (Exception e) {
-    // LOG.error("Could not change component orientation for " + component.getName(), e);
-    // }
-    // } else if (property.getType() == OrientationHV.class) {
-    // try {
-    // property.readFrom(component);
-    // OrientationHV orientation = (OrientationHV) property.getValue();
-    // property.setValue(OrientationHV.values()[1 - orientation.ordinal()]);
-    // property.writeTo(component);
-    // } catch (Exception e) {
-    // LOG.error("Could not change component orientation for " + component.getName(), e);
-    // }
-    // }
-    // }
-    // } else {
-    // // Non-rotatable
-    // Point componentCenter = getCenterOf(Arrays.asList(new IDIYComponent<?>[] {component}),
-    // false);
-    // Point rotatedComponentCenter = new Point();
-    // rotate.transform(componentCenter, rotatedComponentCenter);
-    // for (int index = 0; index < component.getControlPointCount(); index++) {
-    // Point p = new Point(component.getControlPoint(index));
-    // p.translate(rotatedComponentCenter.x - componentCenter.x, rotatedComponentCenter.y -
-    // componentCenter.y);
-    // component.setControlPoint(p, index);
-    // }
-    // }
-    // }
   }
 
   @Override
@@ -1542,10 +1492,7 @@ public class Presenter implements IPlugInPort {
 
       mirrorComponents(selectedComponents, direction, isSnapToGrid());
 
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          MIRROR_SELECTION);
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
-      drawingManager.clearContinuityArea();
+      notifyProjectModifiedIfNeeded(oldProject, "Mirror Selection", true, true);
     }
   }
 
@@ -1662,6 +1609,7 @@ public class Presenter implements IPlugInPort {
           }
         }
       selectionRect = null;
+      
       updateSelection(newSelection);
       // messageDispatcher.dispatchMessage(EventType.SELECTION_CHANGED,
       // selectedComponents);
@@ -1669,19 +1617,12 @@ public class Presenter implements IPlugInPort {
       // calculateSelectionDimension());
     } else if (instantiationManager.getComponentSlot() != null) {
       preDragProject = currentProject.clone();
-      addPendingComponentsToProject(scaledPoint, instantiationManager.getComponentTypeSlot(), null, null);
+      addPendingComponentsToProject(scaledPoint, instantiationManager.getComponentTypeSlot(), null, null, preDragProject);
     } else {
       updateSelection(selectedComponents);
     }
     // There is selection, so we need to finalize the drag&drop
     // operation.
-
-    if (!preDragProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, preDragProject, currentProject, "Drag");
-      drawingManager.clearContinuityArea();
-      projectFileManager.notifyFileChange();
-    }
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
     dragInProgress = false;
   }
 
@@ -1725,12 +1666,8 @@ public class Presenter implements IPlugInPort {
       }
     }
 
+    notifyProjectModifiedIfNeeded(oldProject, "Duplicate", true, true);
     updateSelection(newSelection);
-
-    messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Duplicate");
-    drawingManager.clearContinuityArea();
-    projectFileManager.notifyFileChange();
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
   }
 
   @Override
@@ -1751,11 +1688,8 @@ public class Presenter implements IPlugInPort {
     currentProject.getComponents().removeAll(selectedComponents);
     DrawingCache.Instance.invalidate(selectedComponents);
     
-    messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Delete");
-    drawingManager.clearContinuityArea();
-    projectFileManager.notifyFileChange();
+    notifyProjectModifiedIfNeeded(oldProject, "Delete", true, true);
     updateSelection(EMPTY_SELECTION);
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
   }
 
   @Override
@@ -1784,11 +1718,7 @@ public class Presenter implements IPlugInPort {
     // Then group them together.
     currentProject.getGroups().add(new HashSet<IDIYComponent<?>>(selectedComponents));
     // Notify the listeners.
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Group");
-      projectFileManager.notifyFileChange();
-    }
+    notifyProjectModifiedIfNeeded(oldProject, "Group", false, true);
   }
 
   @Override
@@ -1797,11 +1727,7 @@ public class Presenter implements IPlugInPort {
     Project oldProject = currentProject.clone();
     ungroupComponents(selectedComponents);
     // Notify the listeners.
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Ungroup");
-      projectFileManager.notifyFileChange();
-    }
+    notifyProjectModifiedIfNeeded(oldProject, "Ungroup", false, true);
   }
 
   @Override
@@ -1814,13 +1740,9 @@ public class Presenter implements IPlugInPort {
       currentProject.getLockedLayers().remove(layerZOrder);
     }
     updateSelection(EMPTY_SELECTION);
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
     messageDispatcher.dispatchMessage(EventType.LAYER_STATE_CHANGED, currentProject.getLockedLayers());
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          locked ? "Lock Layer" : "Unlock Layer");
-      projectFileManager.notifyFileChange();
-    }
+    
+    notifyProjectModifiedIfNeeded(oldProject, locked ? "Lock Layer" : "Unlock Layer", false, true);
   }
 
   @Override
@@ -1833,13 +1755,9 @@ public class Presenter implements IPlugInPort {
       currentProject.getHiddenLayers().add(layerZOrder);
     }
     updateSelection(EMPTY_SELECTION);
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
     messageDispatcher.dispatchMessage(EventType.LAYER_VISIBILITY_CHANGED, currentProject.getHiddenLayers());
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          visible ? "Show Layer" : "Hide Layer");
-      projectFileManager.notifyFileChange();
-    }
+    
+    notifyProjectModifiedIfNeeded(oldProject,  visible ? "Show Layer" : "Hide Layer", false, true);
   }
 
   @SuppressWarnings("unchecked")
@@ -1855,7 +1773,7 @@ public class Presenter implements IPlugInPort {
 
       @Override
       public int compare(IDIYComponent<?> o1, IDIYComponent<?> o2) {
-        return new Integer(currentProject.getComponents().indexOf(o2)).compareTo(currentProject.getComponents()
+        return Integer.valueOf(currentProject.getComponents().indexOf(o2)).compareTo(currentProject.getComponents()
             .indexOf(o1));
       }
     });
@@ -1888,11 +1806,7 @@ public class Presenter implements IPlugInPort {
           index--;
         }
     }
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject, "Send to Back");
-      projectFileManager.notifyFileChange();
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
-    }
+    notifyProjectModifiedIfNeeded(oldProject, "Send to Back", false, true);
   }
 
   @SuppressWarnings("unchecked")
@@ -1908,7 +1822,7 @@ public class Presenter implements IPlugInPort {
 
       @Override
       public int compare(IDIYComponent<?> o1, IDIYComponent<?> o2) {
-        return new Integer(currentProject.getComponents().indexOf(o1)).compareTo(currentProject.getComponents()
+        return Integer.valueOf(currentProject.getComponents().indexOf(o1)).compareTo(currentProject.getComponents()
             .indexOf(o2));
       }
     });
@@ -1941,12 +1855,7 @@ public class Presenter implements IPlugInPort {
           index++;
         }
     }
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          "Bring to Front");
-      projectFileManager.notifyFileChange();
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
-    }
+    notifyProjectModifiedIfNeeded(oldProject, "Bring to Front", false, true);
   }
   
   @Override
@@ -1960,7 +1869,7 @@ public class Presenter implements IPlugInPort {
 
       @Override
       public int compare(IDIYComponent<?> o1, IDIYComponent<?> o2) {
-        return new Integer(currentProject.getComponents().indexOf(o1))
+        return Integer.valueOf(currentProject.getComponents().indexOf(o1))
             .compareTo(currentProject.getComponents().indexOf(o2));
       }
     });
@@ -1977,12 +1886,7 @@ public class Presenter implements IPlugInPort {
         currentProject.getComponents().add(zIndex, component);
       }
     }
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          "Change Z-order");
-      projectFileManager.notifyFileChange();
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
-    }
+    notifyProjectModifiedIfNeeded(oldProject, "Change Z-order", false, true);
   }
 
   @Override
@@ -2071,10 +1975,7 @@ public class Presenter implements IPlugInPort {
           .getComponents()));
     }
 
-    messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-        "Renumber selection");
-    projectFileManager.notifyFileChange();
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
+    notifyProjectModifiedIfNeeded(oldProject,  "Renumber selection", false, true);
   }
 
   public void setSelection(Collection<IDIYComponent<?>> newSelection, boolean panToSelection) {
@@ -2346,12 +2247,59 @@ public class Presenter implements IPlugInPort {
       currentProject.getComponents().add(component);
     }
 
-    // Check if we should auto-create something.
-    for (IAutoCreator creator : ReflectionUtils.getAutoCreators()) {
-      List<IDIYComponent<?>> newComponents = creator.createIfNeeded(component);
-      if (newComponents != null) {
-        for (IDIYComponent<?> c : newComponents)
-          addComponent(c, false);
+    if (allowAutoCreate) {
+      // Check if we should auto-create something.
+      for (IAutoCreator creator : ReflectionUtils.getAutoCreators()) {
+        List<IDIYComponent<?>> newComponents = creator.createIfNeeded(component);
+        if (newComponents != null) {
+          for (IDIYComponent<?> c : newComponents)
+            addComponent(c, false);
+        }
+      }
+    }
+  }
+  
+  /**
+   * Adds components to the project taking z-order into account. It places the first component according to the z-index rules 
+   * and then places all the others ensuring they are on top of the first one
+   * 
+   * @param components
+   */
+  @SuppressWarnings("unchecked")
+  private void addComponents(List<IDIYComponent<?>> components) {
+    if (components.isEmpty())
+      return;
+    int maxIndex = 0;
+    for (IDIYComponent<?> component : components) {
+      int index = currentProject.getComponents().size();
+      while (index > maxIndex && ComponentProcessor.getInstance()
+          .extractComponentTypeFrom((Class<? extends IDIYComponent<?>>) component.getClass())
+          .getZOrder() < ComponentProcessor.getInstance()
+              .extractComponentTypeFrom((Class<? extends IDIYComponent<?>>) currentProject
+                  .getComponents().get(index - 1).getClass())
+              .getZOrder()) {
+        index--;
+      }
+      
+      if (index < currentProject.getComponents().size()) {
+        currentProject.getComponents().add(index, component);
+        if (index > maxIndex) {
+          maxIndex = index;
+        }
+      } else {
+        currentProject.getComponents().add(component);
+        maxIndex = currentProject.getComponents().size();
+      }
+    }
+
+    for (IDIYComponent<?> component : components) {
+      // Check if we should auto-create something.
+      for (IAutoCreator creator : ReflectionUtils.getAutoCreators()) {
+        List<IDIYComponent<?>> newComponents = creator.createIfNeeded(component);
+        if (newComponents != null) {
+          for (IDIYComponent<?> c : newComponents)
+            addComponent(c, false);
+        }
       }
     }
   }
@@ -2383,14 +2331,7 @@ public class Presenter implements IPlugInPort {
       view.showMessage("Could not apply changes to the selection. Check the log for details.", ERROR,
           IView.ERROR_MESSAGE);
     } finally {
-      // Notify the listeners.
-      if (!oldProject.equals(currentProject)) {
-        messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-            "Edit Selection");
-        drawingManager.clearContinuityArea();
-        projectFileManager.notifyFileChange();
-      }
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
+      notifyProjectModifiedIfNeeded(oldProject, "Edit Selection", true, true);
     }
   }
 
@@ -2421,13 +2362,7 @@ public class Presenter implements IPlugInPort {
       LOG.error("Could not apply properties", e);
       view.showMessage(APPLY_ERROR, ERROR, IView.ERROR_MESSAGE);
     } finally {
-      // Notify the listeners.
-      if (!oldProject.equals(currentProject)) {
-        messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-            "Edit Project");
-        drawingManager.clearContinuityArea();
-        projectFileManager.notifyFileChange();
-      }
+      notifyProjectModifiedIfNeeded(oldProject, "Edit Project", true, true);
       drawingManager.fireZoomChanged();
     }
   }
@@ -2444,13 +2379,7 @@ public class Presenter implements IPlugInPort {
       LOG.error("Could not apply editor", e);
       view.showMessage("Could not apply " + editor.getEditAction() + ". Check the log for details.", ERROR, IView.ERROR_MESSAGE);
     } finally {
-      // Notify the listeners.
-      if (!oldProject.equals(currentProject)) {
-        messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-            editor.getEditAction());
-        drawingManager.clearContinuityArea();
-        projectFileManager.notifyFileChange();
-      }
+      notifyProjectModifiedIfNeeded(oldProject, editor.getEditAction(), true, true);
       drawingManager.fireZoomChanged();
     }
   }
@@ -2466,13 +2395,7 @@ public class Presenter implements IPlugInPort {
       LOG.warn("Could not apply datasheet to component", e);
       view.showMessage(APPLY_ERROR, ERROR, IView.ERROR_MESSAGE);
     } finally {
-      // Notify the listeners.
-      if (!oldProject.equals(currentProject)) {
-        messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject,
-            currentProject, "Edit Project");
-        drawingManager.clearContinuityArea();
-        projectFileManager.notifyFileChange();
-      }
+      notifyProjectModifiedIfNeeded(oldProject, "Edit Project", true, true);
       drawingManager.fireZoomChanged();
     }
   }
@@ -2693,14 +2616,7 @@ public class Presenter implements IPlugInPort {
       }
     }
 
-    // Notify the listeners.
-    if (!oldProject.equals(currentProject)) {
-      messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-          "Edit Selection");
-      drawingManager.clearContinuityArea();
-      projectFileManager.notifyFileChange();
-    }
-    messageDispatcher.dispatchMessage(EventType.REPAINT);
+    notifyProjectModifiedIfNeeded(oldProject, "Edit Selection", true, true);
   }
   
   @Override
@@ -2759,13 +2675,8 @@ public class Presenter implements IPlugInPort {
         currentProject.getLockedComponents().remove(c);        
       }
     } finally {
-      // Notify the listeners.
-      if (!oldProject.equals(currentProject)) {
-        messageDispatcher.dispatchMessage(EventType.PROJECT_MODIFIED, oldProject, currentProject,
-            locked ? "Lock Component" : "Unlock Component");
-        projectFileManager.notifyFileChange();
-      }
-      messageDispatcher.dispatchMessage(EventType.REPAINT);
+      notifyProjectModifiedIfNeeded(oldProject, locked ? "Lock Component" : "Unlock Component", false, true);
+
       if (locked)
         updateSelection(selectedComponents);      
     }
@@ -2866,7 +2777,7 @@ public class Presenter implements IPlugInPort {
 
       for (Class<?> clazz : classes) {
         if (!Modifier.isAbstract(clazz.getModifiers()) && INetlistAnalyzer.class.isAssignableFrom(clazz)) {
-          result.add((INetlistAnalyzer) clazz.newInstance());
+          result.add((INetlistAnalyzer) clazz.getDeclaredConstructor().newInstance());
         }
       }
 
@@ -2924,5 +2835,18 @@ public class Presenter implements IPlugInPort {
   @Override
   public List<Area> checkContinuityAreaProximity(Size threshold) {
     return drawingManager.getContinuityAreaProximity((float)threshold.convertToPixels());    
+  }
+  
+  // IConfigListener
+
+  @Override
+  public void valueChanged(String configKey, Object value) {
+    if (HIGHLIGHT_CONTINUITY_AREA.equalsIgnoreCase(configKey)) {
+      drawingManager.clearContinuityArea();
+      if (Boolean.TRUE.equals(value)) {
+        drawingManager.clearComponentAreaMap();
+      }
+      messageDispatcher.dispatchMessage(EventType.REPAINT);
+    }
   }
 }
